7870 libnsl: can not use sizeof on arrays passed as function argument